--- a/package.json
+++ b/package.json
@@ -10,25 +10,30 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.8",
+    "eas": "^0.1.0",
+    "eas-cli": "^3.8.1",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-ui-lib": "^6.29.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.6.3"
   },
   "private": true
