--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/nanum-brush-script": "^0.2.3",
+    "@expo/image-utils": "^0.3.23",
     "@expo/webpack-config": "^0.17.2",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.6",
@@ -19,6 +20,7 @@
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
+    "expo-image": "^1.0.0",
     "expo-linking": "~3.3.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -33,7 +35,8 @@
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "expo-dev-client": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
