--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/nanum-brush-script": "^0.2.3",
     "@expo/image-utils": "^0.3.23",
@@ -19,6 +20,7 @@
     "eas-cli": "^3.8.1",
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-image": "^1.0.0",
     "expo-linking": "~3.3.1",
@@ -35,8 +37,7 @@
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.9",
-    "expo-dev-client": "~2.0.1"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
