--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eas-cli": "^3.8.1",
     "expo": "~47.0.12",
     "expo-app-loading": "~2.1.1",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-image": "^1.0.0",
     "expo-linking": "~3.3.1",
@@ -28,6 +29,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
@@ -35,8 +37,7 @@
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.9",
-    "expo-dev-client": "~2.0.1"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
