--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@expo-google-fonts/nanum-brush-script": "^0.2.3",
     "@expo/image-utils": "^0.3.23",
     "@expo/webpack-config": "^0.17.2",
+    "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.16",
     "eas": "^0.1.0",
     "eas-cli": "^3.8.1",
-    "expo": "~47.0.12",
+    "expo": "~47.0.14",
     "expo-app-loading": "~2.1.1",
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
@@ -32,9 +36,11 @@
     "react-native": "0.70.8",
     "react-native-appearance": "^0.3.4",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
