--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-appearance": "^0.3.4",
+    "react-native-circular-action-menu": "^0.5.0",
+    "react-native-floating-action-menu": "^1.2.4",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-material-menu": "^2.0.0",
     "react-native-pager-view": "^6.2.0",
+    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
