--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
     "@expo-google-fonts/nanum-brush-script": "^0.2.3",
     "@expo/image-utils": "^0.3.23",
     "@expo/webpack-config": "^0.17.2",
+    "@ramotion/react-native-circle-menu": "^1.0.0",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
@@ -31,7 +33,9 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-store-review": "~6.0.0",
+    "graphql": "^16.7.0",
     "react": "18.1.0",
+    "react-circular-menu": "^2.4.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-appearance": "^0.3.4",
@@ -48,7 +52,7 @@
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.9"
+    "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
