--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-ui-lib": "^6.29.0",
     "react-native-vector-icons": "^9.2.0",
